--- a/devtools.html
+++ b/devtools.html
@@ -57,13 +57,13 @@ originalsource: http://developer.chrome.com/extensions/devtools.html
 	</p>
 	<ul>
 		<li>
-			<code><a href="devtools.inspectedWindow.html">devtools.inspectedWindow</a></code>
+			<code><a href="https://developer.chrome.com/extensions/devtools_inspectedWindow">devtools.inspectedWindow</a></code>
 		</li>
 		<li>
-			<code><a href="devtools.network.html">devtools.network</a></code>
+			<code><a href="https://developer.chrome.com/extensions/devtools_network">devtools.network</a></code>
 		</li>
 		<li>
-			<code><a href="devtools.panels.html">devtools.panels</a></code>
+			<code><a href="https://developer.chrome.com/extensions/devtools_panels">devtools.panels</a></code>
 		</li>
 	</ul>
 	<p>
@@ -79,15 +79,15 @@ originalsource: http://developer.chrome.com/extensions/devtools.html
 		An instance of the extension's DevTools page is created each time a DevTools window opens. The DevTools page exists for the lifetime of the DevTools window. The DevTools page has access to the DevTools APIs and a limited set of extension APIs. Specifically, the DevTools page can:
 	</p>
 	<ul>
-		<li>Create and interact with panels using the <code><a href="devtools.panels.html">devtools.panels</a></code> APIs.
+		<li>Create and interact with panels using the <code><a href="https://developer.chrome.com/extensions/devtools_panels">devtools.panels</a></code> APIs.
 		</li>
-		<li>Get information about the inspected window and evaluate code in the inspected window using the <code><a href="devtools.inspectedWindow.html">devtools.inspectedWindow</a></code> APIs.
+		<li>Get information about the inspected window and evaluate code in the inspected window using the <code><a href="https://developer.chrome.com/extensions/devtools_inspectedWindow">devtools.inspectedWindow</a></code> APIs.
 		</li>
-		<li>Get information about network requests using the <code><a href="devtools.network.html">devtools.network</a></code> APIs.
+		<li>Get information about network requests using the <code><a href="https://developer.chrome.com/extensions/devtools_network">devtools.network</a></code> APIs.
 		</li>
 	</ul>
 	<p>
-		The DevTools page cannot use most of the extensions APIs directly. It has access to the same subset of the <code><a href="extension.html">extension</a></code> and <code><a href="runtime.html">runtime</a></code> APIs that a content script has access to. Like a content script, a DevTools page can communicate with the background page using <a href="tut_message_passing.html">Message Passing</a>. For an example, see <a href="#injecting">Injecting a Content Script</a>.
+		The DevTools page cannot use most of the extensions APIs directly. It has access to the same subset of the <code><a href="https://developer.chrome.com/extensions/extension">extension</a></code> and <code><a href="https://developer.chrome.com/extensions/runtime">runtime</a></code> APIs that a content script has access to. Like a content script, a DevTools page can communicate with the background page using <a href="tut_message_passing.html">Message Passing</a>. For an example, see <a href="#injecting">Injecting a Content Script</a>.
 	</p>
 	<h2 id="creating">
 		Creating a DevTools extension
@@ -104,7 +104,7 @@ originalsource: http://developer.chrome.com/extensions/devtools.html
 }
 </pre>
 	<p>
-		An instance of the <code>devtools_page</code> specified in your extension's manifest is created for every DevTools window opened. The page may add other extension pages as panels and sidebars to the DevTools window using the <code><a href="devtools.panels.html">devtools.panels</a></code> API.
+		An instance of the <code>devtools_page</code> specified in your extension's manifest is created for every DevTools window opened. The page may add other extension pages as panels and sidebars to the DevTools window using the <code><a href="https://developer.chrome.com/extensions/devtools_panels">devtools.panels</a></code> API.
 	</p>
 	<p class="note">
 		The <code>devtools_page</code> field must point to an HTML page. This differs from the <code>background</code> field, used for specifying a background page, which lets you specify JavaScript files directly.
@@ -155,17 +155,17 @@ sidebar.setObject({ some_data: "Some data to show" });
 	<ul>
 		<li>
 			<p>
-				HTML content. Call <code><a href="devtools.panels.html#method-ExtensionSidebarPane-setPage">setPage</a></code> to specify an HTML page to display in the pane.
+				HTML content. Call <code><a href="https://developer.chrome.com/extensions/devtools_panels#method-ExtensionSidebarPane-setPage">setPage</a></code> to specify an HTML page to display in the pane.
 			</p>
 		</li>
 		<li>
 			<p>
-				JSON data. Pass a JSON object to <code><a href="devtools.panels.html#method-ExtensionSidebarPane-setObject">setObject</a></code>.
+				JSON data. Pass a JSON object to <code><a href="https://developer.chrome.com/extensions/devtools_panels#method-ExtensionSidebarPane-setObject">setObject</a></code>.
 			</p>
 		</li>
 		<li>
 			<p>
-				JavaScript expression. Pass an expression to <code><a href="devtools.panels.html#method-ExtensionSidebarPane-setExpression">setExpression</a></code>. DevTools evaluates the expression in the context of the inspected page, and displays the return value.
+				JavaScript expression. Pass an expression to <code><a href="https://developer.chrome.com/extensions/devtools_panels#method-ExtensionSidebarPane-setExpression">setExpression</a></code>. DevTools evaluates the expression in the context of the inspected page, and displays the return value.
 			</p>
 		</li>
 	</ul>
@@ -182,7 +182,7 @@ sidebar.setObject({ some_data: "Some data to show" });
 		Injecting a Content Script
 	</h3>
 	<p>
-		The DevTools page can't call <code><a href="tabs.html#method-executeScript">tabs.executeScript</a></code> directly. To inject a content script from the DevTools page, you must retrieve the ID of the inspected window's tab using the <code><a href="devtools.inspectedWindow.html#property-tabId">inspectedWindow.tabId</a></code> property and send a message to the background page. From the background page, call <code><a href="tabs.html#method-executeScript">tabs.executeScript</a></code> to inject the script.
+		The DevTools page can't call <code><a href="https://developer.chrome.com/extensions/tabs#method-executeScript">tabs.executeScript</a></code> directly. To inject a content script from the DevTools page, you must retrieve the ID of the inspected window's tab using the <code><a href="https://developer.chrome.com/extensions/devtools_inspectedWindow#property-tabId">inspectedWindow.tabId</a></code> property and send a message to the background page. From the background page, call <code><a href="https://developer.chrome.com/extensions/tabs#method-executeScript">tabs.executeScript</a></code> to inject the script.
 	</p>
 	<p class="note">
 		If a content script has already been injected, you can add additional context scripts using the <code>eval</code> method. See <a href="#selected-element">Passing the Selected Element to a Content Script</a> for more information.
@@ -231,7 +231,7 @@ devToolsConnection.onDisconnect(function() {
 		Evaluating JavaScript in the Inspected Window
 	</h3>
 	<p>
-		You can use the <code><a href="devtools.inspectedWindow.html#method-eval">inspectedWindow.eval</a></code> method to execute JavaScript code in the context of the inspected page. You can invoke the <code>eval</code> method from a DevTools page, panel or sidebar pane.
+		You can use the <code><a href="https://developer.chrome.com/extensions/devtools_inspectedWindow#method-eval">inspectedWindow.eval</a></code> method to execute JavaScript code in the context of the inspected page. You can invoke the <code>eval</code> method from a DevTools page, panel or sidebar pane.
 	</p>
 	<p>
 		By default, the expression is evaluated in the context of the main frame of the page. Use the <code>useContentScriptContext: true</code> option to evaluate the expression in the same context as the content scripts.
@@ -243,13 +243,13 @@ devToolsConnection.onDisconnect(function() {
 		Once the context script context exists, you can use this option to inject additional content scripts.
 	</p>
 	<p class="warning">
-		The <code>eval</code> method is powerful when used in the right context and dangerous when used inappropriately. Use the <code><a href="tabs.html#method-executeScript">tabs.executeScript</a></code> method if you don't need access to the JavaScript context of the inspected page. For detailed cautions and a comparison of the two methods, see <code><a href="devtools.inspectedWindow.html">devtools.inspectedWindow</a></code>.
+		The <code>eval</code> method is powerful when used in the right context and dangerous when used inappropriately. Use the <code><a href="https://developer.chrome.com/extensions/tabs#method-executeScript">tabs.executeScript</a></code> method if you don't need access to the JavaScript context of the inspected page. For detailed cautions and a comparison of the two methods, see <code><a href="https://developer.chrome.com/extensions/devtools_inspectedWindow">devtools.inspectedWindow</a></code>.
 	</p>
 	<h3 id="selected-element">
 		Passing the Selected Element to a Content Script
 	</h3>
 	<p>
-		The content script doesn't have direct access to the current selected element. However, any code you execute using <code><a href="devtools.inspectedWindow.html#method-eval">inspectedWindow.eval</a></code> has access to the DevTools console and command-line APIs. For example, in evaluated code you can use <code>$0</code> to access the selected element.
+		The content script doesn't have direct access to the current selected element. However, any code you execute using <code><a href="https://developer.chrome.com/extensions/devtools_inspectedWindow#method-eval">inspectedWindow.eval</a></code> has access to the DevTools console and command-line APIs. For example, in evaluated code you can use <code>$0</code> to access the selected element.
 	</p>
 	<p>
 		To pass the selected element to a content script:
@@ -257,7 +257,7 @@ devToolsConnection.onDisconnect(function() {
 	<ul>
 		<li>Create a method in the content script that takes the selected element as an argument.
 		</li>
-		<li>Call the method from the DevTools page using <code><a href="devtools.inspectedWindow.html#method-eval">inspectedWindow.eval</a></code> with the <code>useContentScriptContext: true</code> option.
+		<li>Call the method from the DevTools page using <code><a href="https://developer.chrome.com/extensions/devtools_inspectedWindow#method-eval">inspectedWindow.eval</a></code> with the <code>useContentScriptContext: true</code> option.
 		</li>
 	</ul>
 	<p>
@@ -285,7 +285,7 @@ chrome.devtools.inspectedWindow.eval("setSelectedElement($0)",
 		Messaging between the DevTools page and content scripts is indirect, by way of the background page.
 	</p>
 	<p>
-		When sending a message <em>to</em> a content script, the background page can use the <code><a href="tabs.html#method-sendMessage">tabs.sendMessage</a></code> method, which directs a message to the content scripts in a specific tab, as shown in <a href="#injecting">Injecting a Content Script</a>.
+		When sending a message <em>to</em> a content script, the background page can use the <code><a href="https://developer.chrome.com/extensions/tabs#method-sendMessage">tabs.sendMessage</a></code> method, which directs a message to the content scripts in a specific tab, as shown in <a href="#injecting">Injecting a Content Script</a>.
 	</p>
 	<p>
 		When sending a message <em>from</em> a content script, there is no ready-made method to deliver a message to the correct DevTools page instance associated with the current tab. As a workaround, you can have the DevTools page establish a long-lived connection with the background page, and have the background page keep a map of tab IDs to connections, so it can route each message to the correct connection.
@@ -359,7 +359,7 @@ tabId: chrome.devtools.inspectedWindow.tabId
 		Detecting When DevTools Opens and Closes
 	</h3>
 	<p>
-		If your extension needs to track whether the DevTools window is open, you can add an <a href="runtime.html#event-onConnect">onConnect</a> listener to the background page, and call <a href="runtime.html#method-connect">connect</a> from the DevTools page. Since each tab can have its own DevTools window open, you may receive multiple connect events. To track whether any DevTools window is open, you need to count the connect and disconnect events as shown below:
+		If your extension needs to track whether the DevTools window is open, you can add an <a href="https://developer.chrome.com/extensions/runtime#event-onConnect">onConnect</a> listener to the background page, and call <a href="https://developer.chrome.com/extensions/runtime#method-connect">connect</a> from the DevTools page. Since each tab can have its own DevTools window open, you may receive multiple connect events. To track whether any DevTools window is open, you need to count the connect and disconnect events as shown below:
 	</p>
 	<pre>
 // background.js
